# rpysight

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TUTORIAL.md  build.rs  pyproject.toml  test_test.d  tt_data_stream.arrow_stream
librpysight-parse/: Cargo.toml  README.md
librpysight-parse/examples/: test.rs
librpysight-parse/rpysight/: call_timetagger.py
librpysight-parse/src/: .lib.rs.rustfmt  bin.rs  lib.rs  photon.rs
librpysight-parse/tests/: rust_code_to_call_tt.rs  tt_basic_integration.py  tt_ready_to_be_called_by_rust.py
librpysight-render/: Cargo.toml  README.md
librpysight-render/src/: bin.rs  lib.rs  point_cloud_renderer.rs
librpysight-render/tests/: numpy_test.py
resources/: default.toml  rpysight_config_scheme.excalidraw
rpysight/: call_timetagger.py  old_ttbin2pickle.py  read_arrow_stream.py  rpysight.cp38-win_amd64.pyd  test_polars.py  ttbin_to_pysight_pickle.py
src/: bin.rs  configuration.rs  event_stream.rs  gui.rs  interval_tree.rs  lib.rs  photon.rs  point_cloud_renderer.rs  rendering_helpers.rs  serialize_and_render.rs  snakes.rs
tests/: capture_data_for_tests.py  numpy_test.py  read_existing_stream.rs  test_config_serde.rs  test_event_stream_handling.rs  test_read_polars.rs  tests.py
tests/data/: a.t  real_record_batch.csv  real_record_batch_short.csv  record_batch_with_lines.csv  record_batch_with_lines.ron  short_batch_bidir_invalid.ron  short_batch_bidir_valid.ron  short_batch_unidir_invalid.ron  short_batch_unidir_valid.ron  short_record_batch.csv  short_record_batch_two_frames.csv  short_two_frame_batch_bidir_invalid.ron  short_two_frame_batch_bidir_valid.ron  short_two_frame_batch_unidir_invalid.ron  short_two_frame_batch_unidir_valid.ron  short_two_frames_batch_bidir_invalid.ron  short_two_frames_batch_bidir_valid.ron  short_two_frames_batch_unidir_invalid.ron  short_two_frames_batch_unidir_valid.ron
