[package]
name = "rpysight"
version = "0.1.0"
authors = ["HagaiHargil <hagaihargil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.31"
nalgebra = { version = "0.26", features = ["serde-serialize"] }
pyo3 = { version = "0.14", features = ["extension-module", "auto-initialize"] }
arrow2 = "0.4"
thiserror = "1.0"
anyhow = "1.0"
iced = { version = "0.3", features = ["image"] }
log = { version = "0.4", features = ["release_max_level_error"] }
fern = { version = "0.6", features = ["date-based"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
directories = "3.0"
lazy_static = "1.4"
futures = "0.3"
itertools-num = "0.1"
assert_approx_eq = "1.1.0"
hashbrown = "0.11"
ordered-float = { version = "2.7", features = ["serde"] }
num-traits = "0.2"

[dev-dependencies]
ron = "0.6"
rand = "0.8"

[lib]
name = "librpysight"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
requires-dist = ["ipython>=7", "numpy>=1.19", "pandas>=1.2", "pytest>=6.2", "matplotlib>=3.3", "pyarrow>=5.0.0", "toml>=0.10",]
classifier = ["Programming Language :: Python", "Programming Language :: Rust"]
maintainer = "Hagai Har-Gil"
