[package]
name = "librpysight-parse"
version = "0.1.0"
authors = ["HagaiHargil <hagaihargil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "^0.11", features = ["extension-module"] }
nalgebra-numpy = "0.3.0"
kiss3d = "0.30.0"

[lib]
name = "librpysight_parse"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rpysight_parse"
path = "src/bin.rs"

[package.metadata.maturin]
requires-dist = ["ipython>=7", "numpy>=1.20", "pandas>=1.2", "numba>=0.51", "pytest>=6.2", "matplotlib>=3.3",]
classifier = ["Programming Language :: Python", "Programming Language :: Rust"]
maintainer = "Hagai Har-Gil"
